--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
+    "ghpages": "next build && next export && gh-pages -d out -t true",
     "start": "next start",
     "lint": "next lint"
   },
@@ -19,6 +21,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "gh-pages": "^4.0.0",
     "typescript": "4.7.4"
   }
 }
